# TNS-prospect-app-API-POC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
database/: db.db  roles_default.sql  schema.sql
src/: __init__.py  app.py
src/templates/: dashboard.html  header.html  login.html  register.html
