[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "TNS_Prospect-POC"
version = "0.0.1"
authors = [
  { name="invertime" },
]
description = "A POC of a prospecting web application for TNS"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/invertime/TNS-prospect-app-POC/"
Issues = "https://github.com/invertime/TNS-prospect-app-POC/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/__init__"]